# mal

./: .gitignore
impls/rust-dotshix/: Cargo.toml  Makefile  run
impls/rust-dotshix/src/: mal.pest  printer.rs  reader.rs  step0_repl.rs  step1_read_print.rs  step2_eval.rs
