[package]
name = "rust-dotshix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.10"
pest_derive = "2.7.10"
rustyline = "14.0.0"

[[bin]]
name = "step1_read_print"
path = "src/step1_read_print.rs"
